--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -2,86 +2,53 @@
   templateType: global_partial
   label: Website header
 -->
-<header class="header">
+<header class="pt-6 header">
 
   {# The link below is used for a navigation skipper which allows users navigating the site with their keyboard to skip over the site navigation. More information on the navigation skipper can be found here: https://github.com/HubSpot/cms-theme-boilerplate/wiki/Accessibility #}
 
+
+
   <a href="#main-content" class="header__skip">Skip to content</a>
-
-  {# Top header drag and drop area #}
-
-  {% dnd_area 'header-top'
-    label='Top header',
-    class='content-wrapper'
-  %}
-  {% end_dnd_area %}
-
-  {# Main header #}
-
-  <div class="header__container content-wrapper">
-
-    {# Header logo column #}
-
+  <section class="grid px-2 pb-4 md:px-8 md:grid-cols-2 row-logo">
     <div class="header__logo header__logo--main">
       {% module 'site_logo' path='@hubspot/logo' %}
-    </div>
+    </div> <!-- /.header__logo -->
 
-    {# Header navigation column #}
-
-    <div class="header__column">
-
-      {# Header navigation row one #}
-
-      <div class="header__row-1">
-        {% if content.translated_content.values()|selectattr('published')|length || is_listing_view && group.translations %}
-          <div class="header__language-switcher header--element">
-            <div class="header__language-switcher--label">
-              {% module 'language-switcher'
-                path='@hubspot/language_switcher',
-                label='Language switcher',
-                display_mode='localized'
-              %}
-              <div class="header__language-switcher--label-current"> {{ locale_name(locale) }}</div>
-            </div>
-          </div>
-        {% endif %}
-        <div class="header__search header--element">
-          {% module 'site_search'
-            path='@hubspot/search_input',
-            label='Search',
-            field_label='Search',
-            placeholder=''
-          %}
-        </div>
+    <div class="flex flex-col items-center justify-center mditems-end header_contact">
+      <div class="flex flex-col items-center justify-center md:w-3/4 tag_n_phone ">
+        <p class="mb-1 text-sm leading-tight text-center lg:text-lg">Make a <span
+            class="font-black uppercase text-fandango">wise</span> choice for your <br>Medicare Insurance.<br>
+          <span class="font-bold">Contact our friendly team <span class="uppercase">today!</span></span></p>
+        <a class="block text-sm font-extrabold text-center lg:text-2xl text-matisse" href="tel:800-861-4498"><span
+            itemprop="telephone" content="+18008614498">1-800-861-4498</span></a>
       </div>
-
-      {# Header navigation row two #}
-
-      <div class="header__row-2">
-        <div class="header--toggle header__navigation--toggle"></div>
-        {% if content.translated_content|length || is_listing_view && group.translations %}
-          <div class="header--toggle header__language-switcher--toggle"></div>
-        {% endif %}
-        <div class="header--toggle header__search--toggle"></div>
-        <div class="header__close--toggle"></div>
-        <div class="header__navigation header--element">
-          {% module 'navigation-primary'
-            path='../../modules/menu',
-            label='Primary navigation'
-          %}
-        </div>
-      </div>
-
     </div>
+  </section>
 
-  </div>
+  <section class="flex items-center justify-start px-2 md:justify-end md:px-8 nav-main bg-fandango">
+    {% if content.translated_content.values()|selectattr('published')|length || is_listing_view && group.translations %}
+    <div class="header__language-switcher header--element">
+      <div class="header__language-switcher--label">
+        {% module 'language-switcher'
+              path='@hubspot/language_switcher',
+              label='Language switcher',
+              display_mode='localized'
+            %}
+        <div class="header__language-switcher--label-current"> {{ locale_name(locale) }}</div>
+      </div>
+    </div>
+    {% endif %}
 
-  {# Bottom header drag and drop area #}
-
-  {% dnd_area 'header-bottom'
-    label='Bottom header',
-    class='content-wrapper'
-  %}
-  {% end_dnd_area %}
-
+    <div class="header--toggle header__navigation--toggle"></div>
+    {% if content.translated_content|length || is_listing_view && group.translations %}
+    <div class="header--toggle header__language-switcher--toggle"></div>
+    {% endif %}
+    <div class="header__close--toggle"></div>
+    <div class="header__navigation header--element">
+      {% module 'navigation-primary'
+          path='../../modules/menu',
+          label='Primary navigation'
+        %}
+    </div>
+  </section>
 </header>
