--- a/src/css/elements/_forms.css
+++ b/src/css/elements/_forms.css
@@ -149,3 +149,188 @@ form .hs-button {
 .grecaptcha-badge {
   margin: 0 auto;
 }
+
+
+/* CUSTOM */
+/*
+ * HUBSPOT FORM
+ */
+
+ .hbspt-form label {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+}
+
+.hbspt-form {
+  max-width: 80%;
+}
+
+.hbspt-form .hs-input {
+  width: 100%;
+  border: 1px solid blue;
+  border-radius: 0;
+  padding-left: 20px;
+  padding-top: 14px;
+  padding-bottom: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.hbspt-form .hs-input:active {
+  border-bottom: 3px solid #00b878;
+}
+
+.inputs-list {
+  list-style: none;
+}
+
+.inputs-list label {
+  font-weight: 300 !important;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline-offset: -2px;
+}
+
+textarea:focus,
+input:focus {
+  outline: rgba(20, 106, 151, .4) auto 5px;
+}
+
+input,
+textarea,
+select,
+button {
+  text-rendering: auto;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  margin: 0em;
+  font: 400 16px system-ui;
+  padding: 5px;
+}
+
+input,
+select,
+textarea {
+  color: #424242 !important;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
+
+.hbspt-form .hs-form-field {
+  position: relative;
+  padding-left: 20px;
+}
+
+.hbspt-form .hs-form-field:before {
+  left: -3px;
+}
+
+.hs-error-msgs {
+  padding-top: 5px;
+  padding-left: 0;
+  color: rgba(20, 106, 151, 1.00) !important;
+}
+
+.hs-error-msgs label:before {
+  content: "";
+  position: relative;
+  display: inline-block;
+  top: 4px;
+  left: -3px;
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+}
+
+.submitted-message {
+  border: 1px solid rgba(20, 106, 151, .4);
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 35px;
+  padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgba(20, 106, 151, 1.00);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #424242 !important;
+  opacity: 1; /* Firefox */
+  font-size: 18px;
+  font-family: sans-serif;
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #424242 !important;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #424242 !important;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.hs-form-required {
+  display: none;
+}
+
+.hs-form-checkbox-display {
+  display: flex;
+  align-items: flex-start;
+}
+
+.hs-form-checkbox-display span {
+  display: block;
+}
+
+.hs-form-checkbox-display input {
+  width: 15px !important;
+  margin-right: 10px;
+  margin-top: 5px !important;
+}
+
+.hs-submit input {
+  border: 1px solid #fff !important;
+  border-radius: 0;
+  font-size: 20px;
+  background-color: rgba(0,0,0,0);
+  display: block;
+  width: 200px;
+  text-align: center;
+}
+
+.hbspt-form .hs-form-field {
+  padding-left: 0;
+}
+
+.hs_subject_choose_from_ {
+  margin-top: 30px;
+}
+
+.hs-button.primary.large {
+    color: #fff !important;
+    background-color: rgba(20, 106, 151, 1.00) !important;
+}
+
+.hs-input {
+    background-color: rgba(235, 237, 237, 1.00) !important;
+}
