--- a/src/css/page-specific/page-home.css
+++ b/src/css/page-specific/page-home.css
@@ -29,3 +29,42 @@
        margin-top: -106px;
    }
 }
+
+
+/* FORM WIDTH */
+@media (min-width: 768px) {
+  .row-fluid-wrapper.row-depth-1.row-number-12.dnd-row {
+      max-width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+  }
+}
+
+
+.hs-button.primary.large {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 0;
+  min-width: 300px;
+}
+
+
+
+@media (min-width: 481px) {
+  fieldset.form-columns-3 {
+      display: flex;
+      justify-content: space-between;
+  }
+}
+
+
+
+
+
+/* NAV FIX */
+
+.menu--desktop {
+  position: relative;
+  z-index: 10000;
+}
