--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -14,7 +14,7 @@
       {% module 'site_logo' path='@hubspot/logo' %}
     </div> <!-- /.header__logo -->
 
-    <div class="flex flex-col items-center justify-center mditems-end header_contact">
+    <div class="flex flex-col items-center justify-center md:items-end header_contact">
       <div class="flex flex-col items-center justify-center md:w-3/4 tag_n_phone ">
         <p class="mb-1 text-sm leading-tight text-center lg:text-lg">Make a <span
             class="font-black uppercase text-fandango">wise</span> choice for your <br>Medicare Insurance.<br>
@@ -25,7 +25,7 @@
     </div>
   </section>
 
-  <section class="flex items-center justify-start px-2 md:justify-end md:px-8 nav-main bg-fandango">
+  <section class="flex items-center justify-start px-2 bg-fandango md:justify-end md:px-8 nav-main">
     {% if content.translated_content.values()|selectattr('published')|length || is_listing_view && group.translations %}
     <div class="header__language-switcher header--element">
       <div class="header__language-switcher--label">
