--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -6,20 +6,21 @@
   <div class="flex items-center justify-center logo-n-contact md:justify-start">
     <div class="flex flex-col items-center justify-center content-wrap">
       <a href="#" class="block mb-5">
-        <img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/logo-white.png"
-          class="w-full h-auto" alt="white logo for wise medicare">
+        <img src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/logo-white.png" class="w-full h-auto"
+          alt="white logo for wise medicare">
       </a>
-      <p class="mb-1 text-lg text-center text-white">708A N. Bishop Ave.,<br class="block md-hidden" Rolla, MO 65401</p>
-      <a href="tel:1-800-861-4498" class="block mx-auto mb-6 text-xl text-center text-white md:mb-0"><span class="text-center text-white" itemprop="telephone" content="+18008614498">1-800-861-4498</span></a>
+      <p class="mb-1 text-lg text-center text-white">708 N. Bishop Ave., Suite A,<br class="block md:hidden"> Rolla, MO
+        65401</p> <a href="tel:1-800-861-4498" class="block mx-auto mb-6 text-xl text-center text-white md:mb-0"><span
+          class="text-center text-white" itemprop="telephone" content="+18008614498">1-573-364-5446</span></a>
     </div> <!-- /.content-wrap -->
   </div> <!-- /.logo-n-contact -->
 
   <div class="flex items-center justify-center social-n-copyright md:justify-end">
     <div class="flex flex-col items-center justify-center content-wrap">
-      <a href="#" class="block mb-6" target="_blank"><img
+      <a href="#" class="block mb-6 hvr-grow" target="_blank"><img
           src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/logo-youtube.png"
           alt="watch our videos on youtube"></a>
-      <a href="#" class="block mb-6" target="_blank"><img
+      <a href="https://www.facebook.com/Wise-Medicare-187047466735527" class="block mb-6 hvr-grow" target="_blank"><img
           src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/logo-facebook.png"
           alt="find us on facebook"></a>
       <p class="text-xs text-white">&copy; {{ year }} Wise Medicare</p>
