--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -19,8 +19,8 @@
         <p class="mb-1 text-sm leading-tight text-center lg:text-lg">Make a <span
             class="font-black uppercase text-fandango">wise</span> choice for your <br>Medicare Insurance.<br>
           <span class="font-bold">Contact our friendly team <span class="uppercase">today!</span></span></p>
-        <a class="block text-sm font-extrabold text-center lg:text-2xl text-matisse" href="tel:800-861-4498"><span
-            itemprop="telephone" content="+18008614498">1-800-861-4498</span></a>
+        <a class="block text-sm font-extrabold text-center lg:text-2xl text-matisse header-phone hvr-grow"
+          href="tel:573-364-5446"><span itemprop="telephone" content="+15733645446">573-364-5446</span></a>
       </div>
     </div>
   </section>
