footer phone update

--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -10,8 +10,8 @@
           alt="white logo for wise medicare">
       </a>
       <p class="mb-1 text-lg text-center text-white">708 N. Bishop Ave., Suite A,<br class="block md:hidden"> Rolla, MO
-        65401</p> <a href="tel:1-800-861-4498" class="block mx-auto mb-6 text-xl text-center text-white md:mb-0"><span
-          class="text-center text-white" itemprop="telephone" content="+18008614498">1-573-364-5446</span></a>
+        65401</p> <a href="tel:1-573-364-5446" class="block mx-auto mb-6 text-xl text-center text-white md:mb-0"><span
+          class="text-center text-white" itemprop="telephone" content="+15733645446">573-364-5446</span></a>
     </div> <!-- /.content-wrap -->
   </div> <!-- /.logo-n-contact -->
 
