--- a/src/css/thor.css
+++ b/src/css/thor.css
@@ -3,6 +3,18 @@ body {
     overflow-x: hidden !important;
 }
 
+.container-fluid {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.dnd-section .dnd-column {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+
+
 .img-fluid {
   max-width: 100%;
   height: auto;
@@ -22,4 +34,24 @@ body {
 .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+
+
+/* LISTS */
+.widget-type-rich_text ul li {
+  list-style-type: disc !important;
+  margin-bottom: 15px !important;
+  margin-left: 20px !important;
+}
+
+.widget-type-rich_text ol li {
+  list-style-type: decimal !important;
+  margin-bottom: 15px !important;
+  margin-left: 20px !important;
+}
+
+
+/* remove current page indicator underlines */
+.menu__item--depth-1>.menu__link--active-link:after {
+  background-color: rgba(255,255,255,0) !important;
 }
