--- a/src/css/templates/blog.css
+++ b/src/css/templates/blog.css
@@ -88,3 +88,23 @@
   background-color: transparent;
   text-decoration: underline;
 }
+
+
+
+.blog-card__image {
+  max-width: 350px !important;
+}
+
+.section__recent,
+.section__topics,
+.section__subscribe {
+  -moz-box-shadow: 2px 2px 6px rgba(0,0,0,.1);
+  -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,.1);
+  box-shadow: 2px 2px 6px rgba(0,0,0,.1);
+}
+
+h3.blog-card__title a {
+  font-weight: 800 !important;
+  color: #146a97 !important;
+  text-decoration: none !important;
+}
