--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -17,7 +17,7 @@
 
   <div class="flex items-center justify-center social-n-copyright md:justify-end">
     <div class="flex flex-col items-center justify-center content-wrap">
-      <a href="#" class="block mb-6 hvr-grow" target="_blank"><img
+      <a href="https://www.youtube.com/channel/UCmvmVC7o6tu-2AbJ2AabOcg" class="block mb-6 hvr-grow" target="_blank"><img
           src="https://f.hubspotusercontent20.net/hubfs/20507678/img/gx/logo-youtube.png"
           alt="watch our videos on youtube"></a>
       <a href="https://www.facebook.com/Wise-Medicare-187047466735527" class="block mb-6 hvr-grow" target="_blank"><img
