--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -23,7 +23,7 @@
 
   <section class="py-16">
     <div
-      class="flex flex-wrap px-6 md:px-0 lg:px-12 2xl:px-0 md:max-w-screen-sm lg:max-w-screen-lg xl:max-w-screen-2xl mx-auto">
+      class="flex flex-wrap px-6 mx-auto md:px-0 lg:px-12 2xl:px-0 md:max-w-screen-sm lg:max-w-screen-lg xl:max-w-screen-2xl">
       <article class="w-full lg:w-2/3 lg:pr-12">
         {# Blog Listing #}
         {% for content in contents|sort(True, False, 'publish_date') %}
@@ -39,7 +39,7 @@
                   </div -->
             {% endif %}
             <h3 class="blog-card__title"><a href="{{ content.absolute_url }}">{{ content.name }}</a></h3>
-            <div class="bound flex">
+            <div class="flex flex-col bound md:flex-row">
 
               {% if content_group.show_summary_in_listing %}
               <div class="blog-card__post-summary">
@@ -67,14 +67,14 @@
               <a class="blog-card__author-name"
                 href="{{ group.absolute_url }}/author/{{ content.blog_post_author.slug }}">{{ content.blog_post_author.display_name }}</a>
             </div> <!-- /.blog-card__author -->
-            <a class="blog-card__button button button" href="{{ content.absolute_url }}"><span>Read More</span></a>
+            <a class="blog-card__button button" href="{{ content.absolute_url }}"><span>Read More</span></a>
           </section>
         </div>
         {% endfor %}
         {# End Blog Listing #}
       </article>
       <aside class="w-full lg:w-1/3 lg:pl-12">
-        <div class="section__subscribe p-3">
+        <div class="p-3 section__subscribe">
           <h3>Subscribe to Our Blog</h3>
           <!--[if lte IE 8]>
 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
@@ -89,8 +89,8 @@
           </script>
         </div> <!-- /.section__subscribe -->
 
-        <div class="section__recent mt-5 p-3 mb-5">
-          <div class="recentbox-head pb-2">
+        <div class="p-3 mt-5 mb-5 section__recent">
+          <div class="pb-2 recentbox-head">
             <h3>Recent posts</h3>
           </div>
           {% set rec_posts = blog_recent_posts('default', 3) %}
@@ -119,7 +119,7 @@
           </div>
         </div> <!-- /.section__recent -->
 
-        <div class="section__topics p-3">
+        <div class="p-3 section__topics">
           {% post_filter "post_filter" expand_link_text='see all', filter_type='topic', list_title='Posts by Topic', max_links=5, overrideable=False, select_blog='default', label='Posts by Topic' %}
         </div> <!-- /.section__topics -->
       </aside>
