cta added to header

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -21,7 +21,27 @@
           <span class="font-bold">Contact our friendly team <span class="uppercase">today!</span></span></p>
         <a class="block text-sm font-extrabold text-center lg:text-2xl text-matisse header-phone hvr-grow"
           href="tel:573-364-5446"><span itemprop="telephone" content="+15733645446">573-364-5446</span></a>
+        <div class="cta_wrap mx-auto flex justify-center mt-6">
+          <!--HubSpot Call-to-Action Code --><span class="hs-cta-wrapper"
+            id="hs-cta-wrapper-63520b1c-23c5-4d8c-80da-baf85c56b41a"><span
+              class="hs-cta-node hs-cta-63520b1c-23c5-4d8c-80da-baf85c56b41a"
+              id="hs-cta-63520b1c-23c5-4d8c-80da-baf85c56b41a">
+              <!--[if lte IE 8]><div id="hs-cta-ie-element"></div><![endif]--><a
+                href="https://cta-redirect.hubspot.com/cta/redirect/20507678/63520b1c-23c5-4d8c-80da-baf85c56b41a"
+                target="_blank"><img class="hs-cta-img" id="hs-cta-img-63520b1c-23c5-4d8c-80da-baf85c56b41a"
+                  style="border-width:0px;"
+                  src="https://no-cache.hubspot.com/cta/default/20507678/63520b1c-23c5-4d8c-80da-baf85c56b41a.png"
+                  alt="Contact Us Today!" /></a></span>
+            <script charset="utf-8" src="https://js.hscta.net/cta/current.js"></script>
+            <script type="text/javascript">
+              hbspt.cta.load(20507678, '63520b1c-23c5-4d8c-80da-baf85c56b41a', {
+                "region": "na1"
+              });
+            </script>
+          </span><!-- end HubSpot Call-to-Action Code -->
+        </div> <!-- /.cta_wrap -->
       </div>
+
     </div>
   </section>
 
