google tracking code added to head

--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -20,6 +20,7 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   {# To see a full list of what is included via standard_header_includes please reference this article: https://developers.hubspot.com/docs/cms/hubl/variables#required-page-template-variables #}
   {{ standard_header_includes }}
+  <meta name="facebook-domain-verification" content="x022o2b6oyjwcl6v3vw2gzblra0my4" />
 </head>
 
 <body>
